--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_rustore_review
 description: Flutter RuStore Review SDK.
-version: 0.0.1
+version: 0.0.1+1
 homepage: https://rustore.ru
 repository: https://gitflic.ru/project/rustore/flutter-rustore-review
 
