PI-324: Добавлены кнопки запроса и показа ревью в русторе.

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -50,7 +50,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "ru.rustore.flutter_rustore_review_example"
+        applicationId "ru.rustore.reviewflutter"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
         minSdkVersion 23
@@ -60,11 +60,17 @@ android {
     }
 
     signingConfigs {
+        debug {
+            storeFile file('filename.keystore')
+            keyAlias 'keystore'
+            keyPassword 'keystore'
+            storePassword 'keystore'
+        }
         release {
-            keyAlias keystoreProperties['keyAlias']
-            keyPassword keystoreProperties['keyPassword']
-            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-            storePassword keystoreProperties['storePassword']
+            storeFile file('filename.keystore')
+            keyAlias 'keystore'
+            keyPassword 'keystore'
+            storePassword 'keystore'
         }
     }
 
@@ -72,7 +78,7 @@ android {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
         }
         debug {
             signingConfig signingConfigs.release
