--- a/android/build.gradle
+++ b/android/build.gradle
@@ -49,5 +49,5 @@ android {
 }
 
 dependencies {
-    implementation("ru.rustore.sdk:review:2.0.0")
+    implementation("ru.rustore.sdk:review:6.+")
 }
